<resources>
    <string name="app_name">Tip Time</string>
    <string name="et_hint">Cost of Service</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">good (18%)</string>
    <string name="ok">OK (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip Amount :</string>
    <string name="how_was_service">How was the service?</string>
</resources>